{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 75,
  "lineage": "16359663-0be7-6b34-b28d-ff92c08e6201",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b4f68579b1442f1",
            "association_id": "eipassoc-0c7166d4344645029",
            "domain": "vpc",
            "id": "eipalloc-08b4f68579b1442f1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-097fa4e81d4459ca1",
            "private_dns": "ip-10-0-10-122.ec2.internal",
            "private_ip": "10.0.10.122",
            "public_dns": "ec2-54-236-152-243.compute-1.amazonaws.com",
            "public_ip": "54.236.152.243",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "final4_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:internet-gateway/igw-067c6339159c0694a",
            "id": "igw-067c6339159c0694a",
            "owner_id": "848991144892",
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "final4_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08b4f68579b1442f1",
            "association_id": "eipassoc-0c7166d4344645029",
            "connectivity_type": "public",
            "id": "nat-0715fd4e9455567cb",
            "network_interface_id": "eni-097fa4e81d4459ca1",
            "private_ip": "10.0.10.122",
            "public_ip": "54.236.152.243",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-028b35220a498a785"
          },
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_subnet.publicA",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0360932b6c28c09dd1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0715fd4e9455567cb",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0360932b6c28c09dd",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.elastic-ip",
            "aws_nat_gateway.final4_ngw",
            "aws_route_table.private",
            "aws_subnet.publicA",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-067c6339159c0694a",
            "id": "r-rtb-0d2413621f79939351080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d2413621f7993935",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.final4_igw",
            "aws_route_table.public",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:route-table/rtb-0360932b6c28c09dd",
            "id": "rtb-0360932b6c28c09dd",
            "owner_id": "848991144892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0715fd4e9455567cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:route-table/rtb-0d2413621f7993935",
            "id": "rtb-0d2413621f7993935",
            "owner_id": "848991144892",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-067c6339159c0694a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateA_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07474b033c3f94b3a",
            "route_table_id": "rtb-0360932b6c28c09dd",
            "subnet_id": "subnet-003bb8261a2ccecea"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.privateA",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateB_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1bc6d200d4da6f6",
            "route_table_id": "rtb-0360932b6c28c09dd",
            "subnet_id": "subnet-0fbdd91cf2ecae741"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.privateB",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privateC_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc9fa39b516ce2af",
            "route_table_id": "rtb-0360932b6c28c09dd",
            "subnet_id": "subnet-02e11365b9b610118"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.privateC",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicA_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012d04e2f90209872",
            "route_table_id": "rtb-0d2413621f7993935",
            "subnet_id": "subnet-028b35220a498a785"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.publicA",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicB_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02a525fefe2744331",
            "route_table_id": "rtb-0d2413621f7993935",
            "subnet_id": "subnet-07c3fcea8ffcc4225"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.publicB",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicC_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa4f3f0866e08110",
            "route_table_id": "rtb-0d2413621f7993935",
            "subnet_id": "subnet-0d9c7bb13c554fffd"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.publicC",
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-003bb8261a2ccecea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003bb8261a2ccecea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-east-1a"
            },
            "tags_all": {
              "Name": "private-east-1a"
            },
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-0fbdd91cf2ecae741",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbdd91cf2ecae741",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-east-1b"
            },
            "tags_all": {
              "Name": "private-east-1b"
            },
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privateC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-02e11365b9b610118",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e11365b9b610118",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-east-1c"
            },
            "tags_all": {
              "Name": "private-east-1c"
            },
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-028b35220a498a785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-028b35220a498a785",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-east-1a"
            },
            "tags_all": {
              "Name": "public-east-1a"
            },
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-07c3fcea8ffcc4225",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c3fcea8ffcc4225",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-east-1b"
            },
            "tags_all": {
              "Name": "public-east-1b"
            },
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publicC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:subnet/subnet-0d9c7bb13c554fffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9c7bb13c554fffd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848991144892",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-east-1c"
            },
            "tags_all": {
              "Name": "public-east-1c"
            },
            "vpc_id": "vpc-06a4124ee59e50857"
          },
          "dependencies": [
            "aws_vpc.final4_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "final4_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848991144892:vpc/vpc-06a4124ee59e50857",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03807a614b608af8f",
            "default_route_table_id": "rtb-0f742e157ab546b60",
            "default_security_group_id": "sg-0b2a873035f764c36",
            "dhcp_options_id": "dopt-0c27d785631fff1cc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06a4124ee59e50857",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f742e157ab546b60",
            "owner_id": "848991144892",
            "tags": {
              "Name": "final4_vpc"
            },
            "tags_all": {
              "Name": "final4_vpc"
            }
          }
        }
      ]
    }
  ]
}